# Spectrometer

./: CMakeLists.txt  Helpers.cpp  Helpers.hpp  Kromek.cpp  Kromek.hpp  README.md  main.cpp
